unpackaged/main/default/objects/Account/fields/Account_type_id_18_character__c.field-meta.xml
<CustomField>
    <fullName>Account_type_id_18_character__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account type id 18 character</label>
    <type>Text</type>
</CustomField>