unpackaged/main/default/objects/Account/fields/AccountEmail__c.field-meta.xml
<CustomField>
    <fullName>AccountEmail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>AccountEmail</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>