unpackaged/main/default/objects/Account/fields/Brand_Privacy_Email__c.field-meta.xml
<CustomField>
    <fullName>Brand_Privacy_Email__c</fullName>
    <description>Email Address for the Brand&#39;s Privacy Email Communications</description>
    <label>Brand Privacy Email</label>
    <type>Email</type>
</CustomField>