unpackaged/main/default/objects/Account/fields/Brand_Privacy_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Brand_Privacy_Form_Link__c</fullName>
    <description>Link to the brand&#39;s privacy policy form to submit data access and deletion requests</description>
    <label>Brand Privacy Form Link</label>
    <type>Url</type>
</CustomField>