unpackaged/main/default/objects/Account/fields/Brand_Privacy_OWA_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Privacy_OWA_Name__c</fullName>
    <description>This field is the DisplayName of the Brand&#39;s Org Wide Email Address. This value must match *exactly* the DisplayName or privacy emails will not send.</description>
    <label>Brand Privacy OWA Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>