unpackaged/main/default/objects/Account/fields/BulkBuyer__c.field-meta.xml
<CustomField>
    <fullName>BulkBuyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BulkBuyer</label>
    <type>Checkbox</type>
</CustomField>