unpackaged/main/default/objects/Account/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Customer Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>