unpackaged/main/default/objects/Account/fields/Customer_Request_DNM__c.field-meta.xml
<CustomField>
    <fullName>Customer_Request_DNM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Request DNM</label>
    <type>Checkbox</type>
</CustomField>