unpackaged/main/default/objects/Account/fields/Deactivate_Loyalty__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Loyalty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate Loyalty</label>
    <type>Checkbox</type>
</CustomField>