unpackaged/main/default/objects/Account/fields/isEmployee__c.field-meta.xml
<CustomField>
    <fullName>isEmployee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Employee</label>
    <type>Checkbox</type>
</CustomField>