unpackaged/main/default/objects/Account/fields/Loyalty_Account_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Account_Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loyalty Account Deactivated</label>
    <type>Checkbox</type>
</CustomField>