unpackaged/main/default/objects/Account/fields/Privacy_Escalation_Email__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Escalation_Email__c</fullName>
    <description>The email address to use when data owner cases need to be escalated</description>
    <label>Privacy Escalation Email</label>
    <type>Email</type>
</CustomField>