unpackaged/main/default/objects/Account/fields/Rate_of_Return__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Return__c</fullName>
    <label>Rate of Return (%)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>