unpackaged/main/default/objects/Account/fields/ZdProfExtId__c.field-meta.xml
<CustomField>
    <fullName>ZdProfExtId__c</fullName>
    <externalId>true</externalId>
    <label>ZdProfExtId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>