unpackaged/main/default/objects/Account/recordTypes/Brand.recordType-meta.xml
<RecordType>
    <fullName>Brand</fullName>
    <active>true</active>
    <description>Accounts for Brands</description>
    <label>Brand</label>
</RecordType>