unpackaged/main/default/objects/Account/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <label>Customer</label>
</RecordType>