unpackaged/main/default/objects/Account/listViews/Brand_Account.listView-meta.xml
<ListView>
    <fullName>Brand_Account</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Brand_Image_Link__c</columns>
    <columns>Brand_Privacy_Email__c</columns>
    <columns>Brand_Privacy_OWA_Name__c</columns>
    <columns>Brand_Privacy_Form_Link__c</columns>
    <columns>Privacy_Escalation_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Brand</value>
    </filters>
    <label>Brand Account</label>
    <sharedTo>
        <role>Tier_I_CSR_Privacy</role>
    </sharedTo>
</ListView>